--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -28,12 +28,12 @@
 
   <div class="my-5">
     <%= form.label :status %>
-    <%= form.text_field :status, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": task.errors[:status].none?, "border-red-400 focus:outline-red-600": task.errors[:status].any?}] %>
+    <%= form.select :status, [["Pending", "pending"], ["In Progress", "in progress"], ["Completed", "completed"]], {}, { class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": task.errors[:status].none?, "border-red-400 focus:outline-red-600": task.errors[:status].any?}] } %>
   </div>
 
   <div class="my-5">
     <%= form.label :priority %>
-    <%= form.text_field :priority, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": task.errors[:priority].none?, "border-red-400 focus:outline-red-600": task.errors[:priority].any?}] %>
+    <%= form.select :priority, [["High", "high"], ["Medium", "medium"], ["Low", "low"]], {}, { class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": task.errors[:priority].none?, "border-red-400 focus:outline-red-600": task.errors[:priority].any?}] } %>
   </div>
 
   <div class="my-5">
