--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,29 +1,32 @@
-<tr id="<%= dom_id task %>" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
-  <td class="px-6 py-4">
-      <div class="flex items-center">
-        <%= task.title %>
-      </div>
-  </td>
-  <th scope="row" class="flex items-center px-6 py-4 whitespace-nowrap dark:text-white">
-      <%= task.description %>
-  </th>
-  <td class="px-6 py-4">
-    <%= task.category %>
-  </td>
-  <td class="px-6 py-4">
-    <%= task.priority %>
-  </td>
-  <td class="px-6 py-4">
-    <%= task.due_date %>
-  </td>
-  <td class="px-6 py-4">
-      <div class="flex items-center">
-          <div class="h-2.5 w-2.5 rounded-full bg-green-500 me-2"></div> <%= task.status %>
-      </div>
-  </td>
-  <td class="px-6 py-4">
-      <%= link_to "Show", task, class: "px-3 font-medium text-blue-600 dark:text-blue-500 hover:underline" %>
-      <%= link_to "Edit", edit_task_path(task), class: "px-3 font-medium text-green-600 dark:text-blue-500 hover:underline" %>
-      <%= link_to "Destroy", task, method: :delete, class: "px-3 font-medium text-red-600 dark:text-blue-500 hover:underline", data: { turbo_confirm: "Are you sure?" } %>
-  </td>
-</tr>
+<% @tasks.each do |task| %>
+  <tr id="<%= dom_id task %>" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
+    <td class="px-6 py-4">
+        <div class="flex items-center">
+          <%= task.title %>
+        </div>
+    </td>
+    <th scope="row" class="flex items-center px-6 py-4 whitespace-nowrap dark:text-white">
+        <%= task.description %>
+    </th>
+    <td class="px-6 py-4">
+      <%= task.category %>
+    </td>
+    <td class="px-6 py-4">
+      <span class="px-2.5 py-1.5 text-white rounded-lg <%= task.priority =="low" ? "bg-green-500" : task.priority =="medium" ? "bg-yellow-500" : "bg-red-500" %>"><%= task.priority %></span>
+    </td>
+    <td class="px-6 py-4">
+      <%= task.due_date %>
+    </td>
+    <td class="px-6 py-4">
+        <div class="flex items-center">
+            
+            <div class='h-2.5 w-2.5 rounded-full <%= task.status =="completed" ? "bg-green-500" : task.status =="in progress" ? "bg-yellow-500" : "bg-red-500" %>  me-2'></div> <%= task.status %>
+        </div>
+    </td>
+    <td class="px-6 py-4 flex">
+        <%= link_to "Show", task, class: "px-3 font-medium text-blue-600 dark:text-blue-500 hover:underline" %>
+        <%= link_to "Edit", edit_task_path(task), class: "px-3 font-medium text-green-600 dark:text-blue-500 hover:underline" %>
+        <%= button_to "Destroy", task, method: :delete, class: "px-3 font-medium text-red-600 dark:text-blue-500 hover:underline", data: { turbo_confirm: "Are you sure?" } %>
+    </td>
+  </tr>
+<% end %>
