--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -8,7 +8,7 @@
                       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
                   </svg>
               </div>
-              <input type="text" id="search-input" data-search_input-target="search_input" data-action="change->search_input#handleChange" class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search for users">
+              <input type="text" id="search-input" data-search_input-target="search_input" data-action="change->search_input#handleChange" oninput="searchInput()" class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search for users">
           </div>
           <%= link_to "New task", new_task_path, class: "rounded-md px-5 py-2 bg-blue-600 hover:bg-blue-500 text-white block font-medium" %>
         </div>
@@ -41,10 +41,8 @@
                   </th>
               </tr>
           </thead>
-          <tbody>
-            <% @tasks.each do |task| %>
-              <%= render task %>
-            <% end %>
+          <tbody id="tasks-container">
+            <%= render partial: 'task', tasks: @tasks %>
           </tbody>
       </table>
     <% else %>
