--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,7 +7,36 @@
 
   <h1 class="font-bold text-4xl">Showing task</h1>
 
-  <%= render @task %>
+  <div id="<%= dom_id @task %>" class="w-full sm:w-auto my-5 space-y-5">
+    <div>
+      <strong class="block font-medium mb-1">Title:</strong>
+      <%= @task.title %>
+    </div>
+    <div>
+      <strong class="block font-medium mb-1">Description:</strong>
+      <%= @task.description %>
+    </div>
+    <div>
+      <strong class="block font-medium mb-1">Category:</strong>
+      <%= @task.category %>
+    </div>
+    <div>
+      <strong class="block font-medium mb-1">Status:</strong>
+      <%= @task.status %>
+    </div>
+    <div>
+      <strong class="block font-medium mb-1">Priority:</strong>
+      <%= @task.priority %>
+    </div>
+    <div>
+      <strong class="block font-medium mb-1">Due date:</strong>
+      <%= @task.due_date %>
+    </div>
+    <div>
+      <strong class="block font-medium mb-1">User:</strong>
+      <%= @task.user_id %>
+    </div>
+  </div>
 
   <%= link_to "Edit this task", edit_task_path(@task), class: "w-full sm:w-auto text-center rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
   <%= link_to "Back to tasks", tasks_path, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
