--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,40 +8,32 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
-    /* app/assets/stylesheets/pagination.css */
-    .pagination {
-      @apply flex justify-center mt-8; /* Center the pagination and add margin */
-    }
 
-    .pagination a, .pagination span {
-      @apply px-4 py-2 mx-1 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-100;
-    }
+.pagination .current {
+  background-color: green;
+  border-radius: 5px;
+  color: #fff;
+  
+}
 
-    .pagination .current {
-      @apply bg-blue-500 text-white border-blue-500; /* Active page styling */
-    }
+.pagination a {
+  padding: 10px;
+  font-style: normal !important;
+}
 
-    .pagination .disabled {
-      @apply opacity-50 cursor-not-allowed; /* Disabled link styling */
-    }
+.pagination em {
+  padding: 10px;
+  font-style: normal !important;
+}
 
-    .pagination a {
-      padding: 10px;
-      font-style: normal !important;
-    }
 
-    .pagination em {
-      padding: 10px;
-      font-style: normal !important;
-    }
-
-    .pagination .previous_page, .pagination .next_page {
-      background-color: #007bff;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
+.pagination .previous_page, .pagination .next_page {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
