--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,6 @@
 <nav class="bg-white border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+    <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Personal Task Manager</span>
     </a>
@@ -48,5 +48,8 @@
     <% end %>
     <%= link_to "Tasks", tasks_path, class: "w-full sm:w-auto text-center text-white mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-blue-500 inline-block font-medium" %>
   </div>
+  <%= line_chart current_user.tasks.group(:status).count %>
+  <%= bar_chart current_user.tasks.group(:priority).count %>
+  <%= pie_chart current_user.tasks.group(:category).count %>
 </div>
 
