--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,6 @@
+<div class="flex justify-end mt-2 mr-2">
+  <%= link_to "Back to Home", root_path, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-5 py-2.5 bg-gray-500 inline-block font-medium" %>
+</div>
 <div class="container h-9/12 mt-8 mb-8 mx-auto relative overflow-x-auto shadow-md sm:rounded-lg">
     <div class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900 mb-3">
         <h1 class="font-bold text-4xl">Tasks</h1>
